--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
   <script>
     
-    const IG_URL = "https://instagram.com/tokarz_k";
+    const IG_URL = "https://instagram.com/god.wifi";
 
     //  Wymuszenie motywu: ?theme=light / ?theme=dark
     const params = new URLSearchParams(location.search);
