--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <title>godwifi</title>
 
   <link rel="preload" as="image" href="freewifi.png" />
-<link rel="icon" href="favicon.png">
+<link rel="icon" type="image/png" href="favicon.png">
 <link rel="apple-touch-icon" href="favicon.png">
+
 
   <style>
     :root{
