--- a/index.html
+++ b/index.html
@@ -587,13 +587,13 @@
   </div>
 
 <script>
-  // ======= LINKI (Twoje docelowe) =======
+  // ======= LINKI  =======
   const IG_GUMIS = "https://instagram.com/tokarz_k";
   const IG_GODWIFI = "https://instagram.com/god.wifi";
   const SPOTIFY_URL = "https://open.spotify.com/artist/6iz52ADwFl483ghAI7NuS1?si=V1A-TzIoRNqL1iQ_ptCGng";
   const DISCORD_URL = "https://discord.gg/4PTQRsUq9t";
 
-  // Podpinamy linki w menu okna
+ 
   document.getElementById("spotifyLink").href = SPOTIFY_URL;
   document.getElementById("discordLink").href = DISCORD_URL;
 
