--- a/index.html
+++ b/index.html
@@ -525,9 +525,20 @@
 
   <!-- Fake desktop icons -->
   <div class="icons" aria-hidden="true">
-    <div class="icon"><div class="pic"></div><div>Dysk</div></div>
-    <div class="icon"><div class="pic"></div><div>Folder</div></div>
+  <div class="icon">
+    <div class="pic">
+      <img src="drive.png" alt="" class="deskIconImg">
+    </div>
+    <div>Dysk</div>
   </div>
+
+  <div class="icon">
+    <div class="pic">
+      <img src="files.png" alt="" class="deskIconImg">
+    </div>
+    <div>Folder</div>
+  </div>
+</div>
 
   <!-- Center stage -->
   <div class="stage">
