--- a/index.html
+++ b/index.html
@@ -170,15 +170,19 @@
     text-align:center;
   }
   .icon .pic{
-    width:56px; height:56px;
-    margin:0 auto 6px;
-    border-radius:14px;
-    background: rgba(255,255,255,.16);
-    border:1px solid rgba(255,255,255,.18);
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    box-shadow: 0 12px 30px rgba(0,0,0,.28);
-  }
+  width:44px;
+  height:44px;
+  margin:0 auto 6px;
+  border-radius:12px;
+  background: rgba(255,255,255,.16);
+  border:1px solid rgba(255,255,255,.18);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  box-shadow: 0 12px 30px rgba(0,0,0,.28);
+  display:grid;
+  place-items:center;
+}
+
 
   /* ===== App window container (positioned & draggable) ===== */
   .stage{
