--- a/index.html
+++ b/index.html
@@ -155,33 +155,62 @@
   }
 
   /* ===== Desktop icons ===== */
-  .icons{
-    position:fixed;
-    top:56px;
-    left:20px;
-    display:grid;
-    gap:14px;
-    z-index:1;
-    font-size:12px;
-    color:rgba(255,255,255,.85);
-  }
-  .icon{
-    width:72px;
-    text-align:center;
-  }
-  .icon .pic{
-  width:44px;
-  height:44px;
+ /* ===== Desktop icons (STABILNE, responsywne) ===== */
+.icons{
+  position:fixed;
+  top:56px;
+  left:20px;
+  display:grid;
+  gap:16px;
+  z-index:1;
+  color:rgba(255,255,255,.90);
+}
+
+/* Szerokość całego „slotu” ikony */
+.icon{
+  width: clamp(64px, 7.5vw, 92px);
+  text-align:center;
+  font-size: clamp(11px, 1.2vw, 13px);
+  line-height:1.2;
+  text-shadow: 0 2px 10px rgba(0,0,0,.35);
+}
+
+/* Kafelek ikony – zawsze kwadrat, skaluje się płynnie */
+.icon .pic{
+  width: clamp(40px, 5.2vw, 56px);
+  aspect-ratio: 1 / 1;
   margin:0 auto 6px;
-  border-radius:12px;
-  background: rgba(255,255,255,.16);
+  border-radius: clamp(12px, 1.6vw, 16px);
+
+  display:grid;
+  place-items:center;
+
+  background: rgba(255,255,255,.14);
   border:1px solid rgba(255,255,255,.18);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
+
   box-shadow: 0 12px 30px rgba(0,0,0,.28);
-  display:grid;
-  place-items:center;
+
+  /* stabilizacja renderu */
+  transform: translateZ(0);
 }
+
+/* Obrazek w środku – zależny od kafelka (bez skoków) */
+.deskIconImg{
+  width: 62%;
+  height: 62%;
+  object-fit: contain;
+  display:block;
+  pointer-events:none;
+
+  filter: drop-shadow(0 8px 14px rgba(0,0,0,.20));
+  opacity: .95;
+
+  /* stabilizacja */
+  transform: translateZ(0);
+}
+
 
 
   /* ===== App window container (positioned & draggable) ===== */
