--- a/index.html
+++ b/index.html
@@ -1185,54 +1185,67 @@
 
   // ======= Dragging for ANY window =======
   function makeDraggable(titlebarEl){
-    const id = titlebarEl.getAttribute("data-drag");
-    const win = document.getElementById(id);
-    let dragging = false;
-    let startX = 0, startY = 0;
-    let baseX = 0, baseY = 0;
+  const id = titlebarEl.getAttribute("data-drag");
+  const win = document.getElementById(id);
 
-    function getVarPx(name){
-      const v = getComputedStyle(win).getPropertyValue(name).trim();
-      return v ? parseFloat(v.replace("px","")) : 0;
-    }
-    function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
+  let dragging = false;
+  let startX = 0, startY = 0;
+  let baseX = 0, baseY = 0;
 
-    titlebarEl.addEventListener("pointerdown", (e)=>{
-      if (!win.classList.contains("open")) return;
-      if (e.target && e.target.classList && e.target.classList.contains("dot")) return;
+  function getVarPx(name){
+    const v = getComputedStyle(win).getPropertyValue(name).trim();
+    return v ? parseFloat(v.replace("px","")) : 0;
+  }
+  function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
 
-      dragging = true;
-      bringToFront(win);
-      titlebarEl.setPointerCapture(e.pointerId);
-      win.classList.add("dragging");
+  titlebarEl.addEventListener("pointerdown", (e)=>{
+    if (!win.classList.contains("open")) return;
 
-      startX = e.clientX;
-      startY = e.clientY;
-      baseX = getVarPx("--x");
-      baseY = getVarPx("--y");
-    });
+    // jak klikniesz w kółka – nie draguj
+    if (e.target && e.target.classList && e.target.classList.contains("dot")) return;
 
-    titlebarEl.addEventListener("pointermove", (e)=>{
-      if (!dragging) return;
-      const dx = e.clientX - startX;
-      const dy = e.clientY - startY;
+    dragging = true;
+    bringToFront(win);
 
-      const maxX = (window.innerWidth / 2) - 60;
-      const maxY = (window.innerHeight / 2) - 80;
+    // KLUCZ: łapiemy pointera, żeby drag działał nawet jak kursor wyjedzie poza titlebar
+    titlebarEl.setPointerCapture(e.pointerId);
+    win.classList.add("dragging");
 
-      const nx = clamp(baseX + dx, -maxX, maxX);
-      const ny = clamp(baseY + dy, -maxY, maxY);
+    startX = e.clientX;
+    startY = e.clientY;
 
-      win.style.setProperty("--x", nx + "px");
-      win.style.setProperty("--y", ny + "px");
-    });
+    baseX = getVarPx("--x");
+    baseY = getVarPx("--y");
+  });
 
-    function stop(){
-      dragging = false;
-      win.classList.remove("dragging");
-    }
-    titlebarEl.addEventListener("pointerup", stop);
-    titlebarEl.addEventListener("pointercancel", stop);
+  titlebarEl.addEventListener("pointermove", (e)=>{
+    if (!dragging) return;
+
+    const dx = e.clientX - startX;
+    const dy = e.clientY - startY;
+
+    // ogranicz, żeby nie uciekło poza ekran
+    const maxX = (window.innerWidth / 2) - 60;
+    const maxY = (window.innerHeight / 2) - 60;
+
+    const nx = clamp(baseX + dx, -maxX, maxX);
+    const ny = clamp(baseY + dy, -maxY, maxY);
+
+    win.style.setProperty("--x", nx + "px");
+    win.style.setProperty("--y", ny + "px");
+  });
+
+  function stop(){
+    dragging = false;
+    win.classList.remove("dragging");
+  }
+  titlebarEl.addEventListener("pointerup", stop);
+  titlebarEl.addEventListener("pointercancel", stop);
+
+  // klik w okno -> focus
+  win.addEventListener("pointerdown", ()=> bringToFront(win));
+}
+
 
     // focus on click
     win.addEventListener("pointerdown", ()=> bringToFront(win));
