--- a/index.html
+++ b/index.html
@@ -260,16 +260,16 @@
   }
 
   /* ===== Stage + windows ===== */
-  .stage{
-    position:fixed;
-    inset:0;
-    padding: 72px 16px 92px;
-    display:grid;
-    place-items:center;
-    z-index:10;
-    pointer-events:none;
-  }
-  .stage.active{ pointer-events:auto; }
+ .stage{
+  position:fixed;
+  inset:0;
+  padding: 72px 16px 92px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  z-index:10;
+  pointer-events:auto; /* <- KLUCZ: inaczej drag/klik nie działa */
+}
 
   .app{
     width:min(560px, 92vw);
